<resources>
    <string name="app_name">MetaClub</string>
    <string name="metachat">MetaChat</string>
    <string name="role">Role</string>
    <string name="agora_io">Agora.io</string>
    <string name="select_avatar">Select avatar</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="enter_nickname">Please enter a nickname</string>
    <string name="nickname_error_tips">must contain 2&#8211;12 characters</string>
    <string name="nickname">Nickname</string>
    <string name="host">Host</string>
    <string name="audience">Audience</string>
    <string name="playing">Playing</string>
    <string name="loading">Loading</string>
    <string name="middle_label">-</string>
    <string name="bgm_title">背景音乐</string>
    <string name="scene_title">场景</string>
    <string name="action_title">动作</string>
    <string name="lets_chat">Let\'s Chat!</string>
</resources>