<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg2"
    tools:context="io.agora.metachat.example.ui.activity.AudienceActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="53dp"
        android:text="@string/metachat"
        android:textColor="#ff8342e4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginTop="54dp"
        android:src="@mipmap/girl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@mipmap/medal"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="@+id/avatar" />

    <TextView
        android:id="@+id/tv_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="4dp"
        android:text="@string/role"
        android:textColor="#C6C4DE"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/linear_role_host"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:id="@+id/linear_role_host"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/main_select_button_bg"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/tv_nickname"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/host"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_role_audience"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/main_select_button_bg"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/tv_nickname"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/audience"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="4dp"
        android:text="@string/nickname"
        android:textColor="#C6C4DE"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/et_nickname"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_nickname_illegal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/nickname_error_tips"
        android:textColor="#FF6969"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tv_nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_nickname"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_nickname"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/enter_nickname_bg"
        android:hint="@string/enter_nickname"
        android:maxLength="12"
        android:maxLines="1"
        android:paddingStart="18dp"
        android:paddingEnd="36dp"
        android:textColor="#1B0844"
        android:textColorHint="#756C92"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/tv_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_nickname_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="15dp"
        android:src="@drawable/ic_random_name"
        app:layout_constraintBottom_toBottomOf="@id/et_nickname"
        app:layout_constraintEnd_toEndOf="@id/et_nickname"
        app:layout_constraintTop_toTopOf="@id/et_nickname" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="4dp"
        android:text="@string/gender"
        android:textColor="#C6C4DE"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/linear_male"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:id="@+id/linear_male"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/main_select_button_bg"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/enter"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_male" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/male"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_female"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/main_select_button_bg"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/enter"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_female" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/female"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/enter"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:src="@mipmap/enter"
        app:layout_constraintBottom_toTopOf="@id/enter_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/enter_tip"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.41"
        android:text="@string/select_avatar"
        android:textColor="#d9f9f9f9"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/logo_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logo_label"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="15dp"
        android:alpha="0.51"
        android:text="@string/agora_io"
        android:textColor="#d9ffffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
